gcc/testsuite/rust/rustc/ui/stability-attribute/missing-stability-attr-at-top-level.rs
#![feature(staged_api)]
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

